[workspace.package]
version = "1.0.0-alpha.5"
edition = "2021"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
repository = "https://github.com/LemmyNet/lemmy"
rust-version = "1.81"

[package]
name = "lemmy_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
doctest = false

[lints]
workspace = true

# See https://github.com/johnthagen/min-sized-rust for additional optimizations
[profile.release]
lto = "fat"
opt-level = 3     # Optimize for speed, not size.
codegen-units = 1 # Reduce parallel code generation.

# This profile significantly speeds up build time. If debug info is needed you can comment the line
# out temporarily, but make sure to leave this in the main branch.
[profile.dev]
debug = 0

[features]
default = []

[workspace]
members = [
  "crates/api/api",
  "crates/api/api_crud",
  "crates/api/api_common",
  "crates/api/api_utils",
  "crates/apub",
  "crates/apub_objects",
  "crates/utils",
  "crates/db_schema",
  "crates/db_schema_file",
  "crates/db_views/private_message",
  "crates/db_views/local_user",
  "crates/db_views/local_image",
  "crates/db_views/person",
  "crates/db_views/post",
  "crates/db_views/vote",
  "crates/db_views/reports",
  "crates/db_views/local_image",
  "crates/db_views/comment",
  "crates/db_views/community",
  "crates/db_views/community_moderator",
  "crates/db_views/community_follower",
  "crates/db_views/community_person_ban",
  "crates/db_views/custom_emoji",
  "crates/db_views/inbox_combined",
  "crates/db_views/modlog_combined",
  "crates/db_views/person_content_combined",
  "crates/db_views/person_saved_combined",
  "crates/db_views/person_liked_combined",
  "crates/db_views/report_combined",
  "crates/db_views/search_combined",
  "crates/db_views/site",
  "crates/routes",
  "crates/federate",
  "crates/email",
]

[workspace.lints.clippy]
cast_lossless = "deny"
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
get_first = "deny"
implicit_clone = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
manual_string_new = "deny"
needless_collect = "deny"
perf = { level = "deny", priority = -1 }
redundant_closure_for_method_calls = "deny"
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
uninlined_format_args = "allow"
unused_self = "deny"
unwrap_used = "deny"
unimplemented = "deny"
unused_async = "deny"
map_err_ignore = "deny"
expect_used = "deny"
as_conversions = "deny"

[workspace.dependencies]
lemmy_api = { version = "=1.0.0-alpha.5", path = "./crates/api/api" }
lemmy_api_crud = { version = "=1.0.0-alpha.5", path = "./crates/api/api_crud" }
lemmy_apub = { version = "=1.0.0-alpha.5", path = "./crates/apub" }
lemmy_apub_objects = { version = "=1.0.0-alpha.5", path = "./crates/apub_objects" }
lemmy_utils = { version = "=1.0.0-alpha.5", path = "./crates/utils", default-features = false }
lemmy_db_schema = { version = "=1.0.0-alpha.5", path = "./crates/db_schema" }
lemmy_db_schema_file = { version = "=1.0.0-alpha.5", path = "./crates/db_schema_file" }
lemmy_api_utils = { version = "=1.0.0-alpha.5", path = "./crates/api/api_utils" }
lemmy_routes = { version = "=1.0.0-alpha.5", path = "./crates/routes" }
lemmy_federate = { version = "=1.0.0-alpha.5", path = "./crates/federate" }
lemmy_email = { version = "=1.0.0-alpha.5", path = "./crates/email" }
lemmy_db_views_comment = { version = "=1.0.0-alpha.5", path = "./crates/db_views/comment" }
lemmy_db_views_community = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community" }
lemmy_db_views_community_follower = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_follower" }
lemmy_db_views_community_moderator = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_moderator" }
lemmy_db_views_community_person_ban = { version = "=1.0.0-alpha.5", path = "./crates/db_views/community_person_ban" }
lemmy_db_views_custom_emoji = { version = "=1.0.0-alpha.5", path = "./crates/db_views/custom_emoji" }
lemmy_db_views_inbox_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/inbox_combined" }
lemmy_db_views_local_image = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_image" }
lemmy_db_views_local_user = { version = "=1.0.0-alpha.5", path = "./crates/db_views/local_user" }
lemmy_db_views_modlog_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/modlog_combined" }
lemmy_db_views_person = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person" }
lemmy_db_views_person_content_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_content_combined" }
lemmy_db_views_person_liked_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_liked_combined" }
lemmy_db_views_person_saved_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/person_saved_combined" }
lemmy_db_views_post = { version = "=1.0.0-alpha.5", path = "./crates/db_views/post" }
lemmy_db_views_private_message = { version = "=1.0.0-alpha.5", path = "./crates/db_views/private_message" }
lemmy_db_views_readable_federation_state = { version = "=1.0.0-alpha.5", path = "./crates/db_views/readable_federation_state" }
lemmy_db_views_registration_applications = { version = "=1.0.0-alpha.5", path = "./crates/db_views/registration_applications" }
lemmy_db_views_report_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/report_combined" }
lemmy_db_views_reports = { version = "=1.0.0-alpha.5", path = "./crates/db_views/reports" }
lemmy_db_views_search_combined = { version = "=1.0.0-alpha.5", path = "./crates/db_views/search_combined" }
lemmy_db_views_site = { version = "=1.0.0-alpha.5", path = "./crates/db_views/site" }
lemmy_db_views_vote = { version = "=1.0.0-alpha.5", path = "./crates/db_views/vote" }
activitypub_federation = { version = "0.7.0-beta.3", default-features = false, features = [
  "actix-web",
] }
diesel = { version = "2.2.10", features = [
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
  "64-column-tables",
] }
diesel_migrations = "2.2.0"
diesel-async = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
actix-web = { version = "4.11.0", default-features = false, features = [
  "compress-brotli",
  "compress-gzip",
  "compress-zstd",
  "cookies",
  "macros",
  "rustls-0_23",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-actix-web = { version = "0.7.18", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.19", default-features = false, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.4.2"
reqwest-tracing = "0.5.7"
clokwerk = "0.4.0"
doku = { version = "0.21.1", features = ["url-2"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = [
  "now",
  "serde",
], default-features = false }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["serde"] }
captcha = "1.0.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
diesel_ltree = "0.4.0"
serial_test = "3.2.0"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
diesel-derive-newtype = "2.1.2"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
enum-map = { version = "2.7" }
strum = { version = "0.27.1", features = ["derive"] }
itertools = "0.14.0"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.2"
rosetta-i18n = "0.1.3"
ts-rs = { version = "11.0.1", features = [
  "chrono-impl",
  "no-serde-warnings",
  "url-impl",
] }
rustls = { version = "0.23.27", features = ["ring"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
urlencoding = "2.1.3"
moka = { version = "0.12.10", features = ["future"] }
i-love-jesus = { version = "0.2.0" }
clap = { version = "4.5.39", features = ["derive", "env"] }
pretty_assertions = "1.4.1"
derive-new = "0.7.0"
tuplex = "0.1.2"
html2text = "0.15.1"
async-trait = "0.1.88"
either = "1.15.0"
extism = { git = "https://github.com/extism/extism.git", branch = "main" }
extism-convert = { git = "https://github.com/extism/extism.git", branch = "main" }

[dependencies]
lemmy_api = { workspace = true }
lemmy_api_crud = { workspace = true }
lemmy_apub = { workspace = true }
lemmy_apub_objects = { workspace = true }
lemmy_utils = { workspace = true }
lemmy_db_schema = { workspace = true }
lemmy_db_schema_file = { workspace = true }
lemmy_api_utils = { workspace = true }
lemmy_routes = { workspace = true }
lemmy_federate = { workspace = true }
activitypub_federation = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tokio.workspace = true
clap = { workspace = true }
mimalloc = "0.1.46"

# Speedup RSA key generation
# https://github.com/RustCrypto/RSA/blob/master/README.md#example
[profile.dev.package.num-bigint-dig]
opt-level = 3
