[package]
name = "lemmy_api_structs"
version = "0.1.0"
authors = ["Felix Ableitner <me@nutomic.com>"]
edition = "2018"

[lib]
name = "lemmy_api_structs"
path = "src/lib.rs"

[dependencies]
lemmy_db = { path = "../lemmy_db" }
lemmy_utils = { path = "../lemmy_utils" }
serde = { version = "1.0.105", features = ["derive"] }
log = "0.4.0"
diesel = "1.4.4"
actix-web = { version = "3.0.0-beta.3", features = ["rustls"] }
