[package]
name = "lemmy_db"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_db"
path = "src/lib.rs"

[dependencies]
lemmy_utils = { path = "../lemmy_utils" }
diesel = { version = "1.4", features = ["postgres","chrono","r2d2","64-column-tables","serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
strum = "0.19"
strum_macros = "0.19"
log = "0.4"
sha2 = "0.9"
bcrypt = "0.8"
url = { version = "2.1", features = ["serde"] }
lazy_static = "1.3"
regex = "1.3"
