[package]
name = "lemmy_db_aggregates"
version = "0.1.0"
edition = "2018"

[dependencies]
lemmy_db_schema = { path = "../lemmy_db_schema" }
lemmy_db_queries = { path = "../lemmy_db_queries" }
diesel = { version = "1.4.5", features = ["postgres","chrono","r2d2","serde_json"] }
serde = { version = "1.0.118", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
