[package]
name = "lemmy_rate_limit"
version = "0.1.0"
authors = ["Felix Ableitner <me@nutomic.com>"]
edition = "2018"

[lib]
name = "lemmy_rate_limit"
path = "src/lib.rs"

[dependencies]
lemmy_utils = { path = "../lemmy_utils" }
tokio = "0.2"
strum = "0.19"
strum_macros = "0.19"
futures = "0.3.5"
actix-web = { version = "3.0", default-features = false, features = ["rustls"] }
log = "0.4"
