[package]
name = "lemmy_structs"
version = "0.1.0"
authors = ["Felix Ableitner <me@nutomic.com>"]
edition = "2018"

[lib]
name = "lemmy_structs"
path = "src/lib.rs"

[dependencies]
lemmy_db = { path = "../lemmy_db" }
lemmy_utils = { path = "../lemmy_utils" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
diesel = "1.4"
actix = "0.10"
actix-web = { version = "3.0" }
strum = "0.19"
strum_macros = "0.19"
chrono = { version = "0.4", features = ["serde"] }
