[package]
name = "lemmy_utils"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_utils"
path = "src/lib.rs"

[dependencies]
regex = "1.3"
config = { version = "0.10", default-features = false, features = ["hjson"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.10.0-alpha.3"
log = "0.4"
itertools = "0.9"
rand = "0.7"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
thiserror = "1.0"
comrak = "0.8"
lazy_static = "1.3"
openssl = "0.10"
url = { version = "2.1", features = ["serde"] }
actix-web = { version = "3.0", default-features = false, features = ["rustls"] }
actix-rt = { version = "1.1", default-features = false  }
anyhow = "1.0"
reqwest = { version = "0.10", features = ["json"] }
