[package]
name = "lemmy_server"
version = "0.0.1"
edition = "2018"

[profile.release]
lto = true

[workspace]
members = [
    "lemmy_utils",
    "lemmy_db",
    "lemmy_api_structs",
    "lemmy_rate_limit",
]

[dependencies]
lemmy_utils = { path = "./lemmy_utils" }
lemmy_db = { path = "./lemmy_db" }
lemmy_api_structs = { path = "./lemmy_api_structs" }
lemmy_rate_limit = { path = "./lemmy_rate_limit" }
diesel = "1.4.4"
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
activitystreams = "0.7.0-alpha.4"
activitystreams-ext = "0.1.0-alpha.2"
bcrypt = "0.8.0"
chrono = { version = "0.4.7", features = ["serde"] }
serde_json = { version = "1.0.52", features = ["preserve_order"]}
serde = { version = "1.0.105", features = ["derive"] }
actix = "0.10.0"
actix-web = { version = "3.0.0", default-features = false, features = ["rustls"] }
actix-files = { version = "0.3.0", default-features = false }
actix-web-actors = { version = "3.0.0", default-features = false }
actix-rt = { version = "1.1.1", default-features = false }
awc = { version = "2.0.0", default-features = false }
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"
jsonwebtoken = "7.0.1"
lazy_static = "1.3.0"
rss = "1.9.0"
url = { version = "2.1.1", features = ["serde"] }
percent-encoding = "2.1.0"
openssl = "0.10"
http = "0.2.1"
http-signature-normalization-actix = { version = "0.4.0", default-features = false, features = ["sha-2"] }
base64 = "0.12.1"
tokio = "0.2.21"
futures = "0.3.5"
itertools = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.9"
async-trait = "0.1.40"
captcha = "0.0.7"
anyhow = "1.0.32"
thiserror = "1.0.20"
background-jobs = " 0.8.0-alpha.2"
reqwest = { version = "0.10", features = ["json"] }
